--- a/gulp-start/app/common/styles/core/base.scss
+++ b/gulp-start/app/common/styles/core/base.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     min-height: 100%;
     box-sizing: border-box;
@@ -7,7 +11,26 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.container {
-    width: 100%;
-    max-width: 1300px;
+body {
+    padding: 0;
+    margin: 0;
+}
+
+input {
+    font-family: $font-family-base;
+    font-size: $font-size-base;
+    font-weight: normal;
+    -webkit-appearance: none;
+    box-shadow: none;
+
+    &::-ms-clear {
+        display: none;
+    }
+}
+
+ul,
+ol {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
