--- a/gulp-start/app/common/styles/variables/colors.scss
+++ b/gulp-start/app/common/styles/variables/colors.scss
@@ -1,8 +1,17 @@
 $colors: (
-    'black': #000,
-    'white': #fff
+	"black": #000,
+	"white": #fff,
+	"gray-darkest": #202020,
+	"gray-darker": #343535,
+	"gray-dark": #9c9c9c,
+	"gray": #9b9b9b,
+	"gray-light": #d7d7d7,
+	"gray-lighter": #f5f5f5,
+
+	"blue": #0566ff,
+	"blue-dark": #044ab8
 );
 
 @function color($color) {
-    @return map-get($colors, $color);
+	@return map-get($colors, $color);
 }
