--- a/gulp-start/app/components/header/header.pug
+++ b/gulp-start/app/components/header/header.pug
@@ -1,12 +1,73 @@
 include ../logo/logo
 include ../search/search
 include ../icon-btn/icon-btn
+include ../menu/menu
 
 mixin header()
     header.header
-        +logo('assets/images/logo.png')
-        +search()
-        header.header__btns
-            +icon-btn('assets/images/heart.png', 10)
-            +icon-btn('assets/images/basket.png', 2)
+        .header__top
+            .container
+                .row.align-items-lg-center
+                    .col-xl-4
+                        +logo('assets/images/logo.svg')
+                    .col-xl-13.offset-xl-2
+                        +search()
+                    .col-xl-3.offset-xl-2
+                        header.header__btns
+                            +icon-btn('favourites', 10)
+                            +icon-btn('cart', 2)
+        .header__bottom
+            .container
+                -
+                    var nav = [
+                        {
+                            title: 'Мебель',
+                            url: '#',
+                            submenu: [
+                                {title: 'Мягкая мебель', url: '#'},
+                                {title: 'Столы', url: '#'},
+                                {title: 'Стулья', url: '#'},
+                                {title: 'Стеллажи', url: '#'},
+                                {title: 'Шкафы-купе', url: '#'}
+                            ]
+                        },
+                        {
+                            title: 'Хранение',
+                            url: '#'
+                        },
+                        {
+                            title: 'Спальня',
+                            url: '#',
+                            submenu: [
+                                {title: 'Мягкая мебель', url: '#'},
+                                {title: 'Столы', url: '#'},
+                                {title: 'Стулья', url: '#'},
+                                {title: 'Стеллажи', url: '#'},
+                                {title: 'Шкафы-купе', url: '#'}
+                            ]
+                        },
+                        {
+                            title: 'Кухня',
+                            url: '#'
+                        },
+                        {
+                            title: 'Аксесуары',
+                            url: '#'
+                        },
+                        {
+                            title: 'Акции',
+                            url: '#',
+                            submenu: [
+                                {title: 'Мягкая мебель', url: '#'},
+                                {title: 'Столы', url: '#'},
+                                {title: 'Стулья', url: '#'},
+                                {title: 'Стеллажи', url: '#'},
+                                {title: 'Шкафы-купе', url: '#'}
+                            ]
+                        }
+                    ]
+                +menu(nav)
+
+
+        
             
