--- a/gulp-start/app/components/search/search.pug
+++ b/gulp-start/app/components/search/search.pug
@@ -1,4 +1,6 @@
+include ../input-text/input-text
+
 mixin search()
-    form(action="")
-        input(type="text" value="" placeholder="Поиск")
+    form(action='' class='search')
+        +input-text()(name='search-input' value='' placeholder='Поиск')
         
